--- a/Creatives/index.html
+++ b/Creatives/index.html
@@ -146,8 +146,7 @@
 								</div>	
 								<div class="third-block__foto foto-right">
 								<img src="img/glasses.jpg" alt="" class="third-block__img ">
-								</div>
-						
+								</div>						
 					</div>						
 					<div class="third-block__row light-block">
 						<div class="third-block__foto">
@@ -350,13 +349,13 @@
 					<form action="#" class="eighth-block__form" method="post">
 						<div class="flex-wrap">
 							<div class="eighth-block__input-wrap">
-								<input type="text" class="eighth-block__input input-style" placeholder="Name" name="name">
+								<input type="text" class="eighth-block__input input-style" placeholder="Name" name="name" required>
 							</div>
 							<div class="eighth-block__input-wrap">
-								<input type="text" class="eighth-block__input input-style" placeholder="Email" name="email">
+								<input type="email" class="eighth-block__input input-style" placeholder="Email" name="email" required>
 							</div>
 							<div class="eighth-block__input-wrap">
-								<input type="text" class="eighth-block__input input-style" placeholder="Phone" name="phone">
+								<input type="tel" class="eighth-block__input input-style" placeholder="Phone" name="phone" required>
 							</div>
 							<div class="eighth-block__textarea-wrap">
 								<textarea id="#" class="eighth-block__textarea input-style" placeholder="Message" name="message"></textarea>
@@ -371,7 +370,7 @@
 
 		<footer class="footer">
 			<div class="footer__map">
-				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A91ba0b6e41789c6b4254da2cc012f66964ef798464c239afcdad18230988beb1&amp;width=100%25&amp;height=335&amp;lang=ru_RU&amp;scroll=false"></script>
+				<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A91ba0b6e41789c6b4254da2cc012f66964ef798464c239afcdad18230988beb1&amp;source=constructor" width="100%" height="335" frameborder="0"></iframe>
 			</div>
 			<div class="footer__rights dark-block">
 				<div class="container">
