--- a/Greenshop/index.html
+++ b/Greenshop/index.html
@@ -15,7 +15,7 @@
 				<a class="header__logo">
 					<img src="img/logo.svg" alt="Logo" class="logo-img">
 				</a>
-				<div class="overlay"></div>
+				<div class="overlay">
 				<nav class="header__nav">
 					<a class="header__logo-nav">
 						<img src="img/logo.svg" alt="Logo" class="logo-img">
@@ -49,6 +49,7 @@
 						</form>					
 					
 				</nav>
+				</div>
 				<div class="adminpanel">								
 						<form action="#" id="header-search" class="adminpanel__search" method="GET">				
 							<input type="text" name="finde" id="adminpanel-input" placeholder="Find your plants" class="adminpanel__search-input">			
