--- a/Greenshop/index.html
+++ b/Greenshop/index.html
@@ -15,7 +15,7 @@
 				<a class="header__logo">
 					<img src="img/logo.svg" alt="Logo" class="logo-img">
 				</a>
-				<div class="overlay">
+				<div class="overlay"></div>
 				<nav class="header__nav">
 					<a class="header__logo-nav">
 						<img src="img/logo.svg" alt="Logo" class="logo-img">
@@ -49,7 +49,6 @@
 						</form>					
 					
 				</nav>
-				</div>
 				<div class="adminpanel">								
 						<form action="#" id="header-search" class="adminpanel__search" method="GET">				
 							<input type="text" name="finde" id="adminpanel-input" placeholder="Find your plants" class="adminpanel__search-input">			
@@ -145,7 +144,7 @@
 	<section class="main">
 		<div class="container">
 			<div class="main__wrap">
-				<div class="sidebar-overlay"></div>
+				<div class="sidebar-overlay">
 				<div class="sidebar__wrap">
 					<div class="main__sidebar-wrap">
 					<div class="main__sidebar">					
@@ -314,11 +313,12 @@
 					</div>
 					<span class="baner__circle baner__item1"></span>
 					<span class="baner__circle baner__item2"></span>
-					<span class="baner__circle baner__item3"></span>		
+					<span class="baner__circle baner__item3"></span>				
 				</div>
 				</div>
 				<div class="sidebar__wrap-close">					
 				</div>
+			</div>
 			</div>	
 
 		 	<div class="main__page">			
