--- a/Greenshop/index.html
+++ b/Greenshop/index.html
@@ -144,7 +144,7 @@
 	<section class="main">
 		<div class="container">
 			<div class="main__wrap">
-				<div class="sidebar-overlay">
+				<div class="sidebar-overlay"></div>
 				<div class="sidebar__wrap">
 					<div class="main__sidebar-wrap">
 					<div class="main__sidebar">					
@@ -319,7 +319,7 @@
 				<div class="sidebar__wrap-close">					
 				</div>
 			</div>
-			</div>	
+				
 
 		 	<div class="main__page">			
 				<div class="navs-wrap flex-wrap">					
