--- a/Creatives/index.html
+++ b/Creatives/index.html
@@ -372,7 +372,7 @@
 			</div>
 			<footer class="footer">
 				<div class="footer__map">					
-					<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A91ba0b6e41789c6b4254da2cc012f66964ef798464c239afcdad18230988beb1&amp;source=constructor" width="100%" height="335" frameborder="0" scroll="false" loading="lazy"></iframe>
+					<iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3A91ba0b6e41789c6b4254da2cc012f66964ef798464c239afcdad18230988beb1&amp;source=constructor" width="100%" height="335" frameborder="0" loading="lazy"></iframe>
 				</div>
 				<div class="footer__rights dark-block">
 					<div class="container">
