--- a/Creatives/index.html
+++ b/Creatives/index.html
@@ -390,8 +390,10 @@
 		</main>		
 	</div>
 <script src="js/wow.min.js"></script>
-<script>	
+<script>
+	//if(document.documentElement.clientWidth > 767){	
 	 new WOW().init();
+	//}
 </script>			
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="js/scroll.js"></script>
