--- a/Creatives/index.html
+++ b/Creatives/index.html
@@ -182,7 +182,7 @@
 			</div>
 			<div class="fourth-block light-block">
 				<div class="container">						
-					<div class="block-title wow bounceInDown" >
+					<div class="block-title wow bounceInDown" data-wow-delay="0.5s" >
 						Let's blog
 					</div>
 					<div class="block-subtitle">
