--- a/Greenshop/shop/index.html
+++ b/Greenshop/shop/index.html
@@ -84,7 +84,7 @@
          <div class="shop-main__product">
             <div class="shop-main__slider">
                <div class="shop-main__slider-nav">
-                  <div class="shop-main__card slick-current slick-active">
+                  <div class="shop-main__card">
                      <img src="../img/b1img4.png" alt="flower" class="shop-main__slider-img">
                   </div>
                   <div class="shop-main__card">
@@ -98,7 +98,7 @@
                   </div>
                </div>
                <div class="shop-main__slider-for">
-                  <div class="shop-main__card-for slick-current slick-active">
+                  <div class="shop-main__card-for ">
                      <img src="../img/page2img2.png" id="zoomImg1" alt="flower" class="shop-main__img-for">
                      <div class="shop-main__slider-search"><span class="icon-search"></span></div>
                   </div>
