--- a/Unvent/index.html
+++ b/Unvent/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
 	<title>Unvent</title>
 </head>
@@ -24,7 +25,7 @@
 						территории Киева и Киевской обл.
 					</p>
 				</div>
-				<div class="heder__where-wrap">
+				<div class="header__where-wrap">
 					<div class="header__top-where">
 						<div class="header__top-map">
 							<img src="img/map.png" alt="Map" class="map-img">
@@ -32,10 +33,13 @@
 						<p class="header__top-address">
 							<span class="heavy-text">Украина, Киев,</span><br>
 							Васильковская 30
+							<span class="header__address-link">
+								Посмотреть на карте
+							</span>
 						</p>
 					</div>
 				</div>
-				<a href="" class="header__top-consultation btn">
+				<a href="#" class="header__top-consultation btn">
 					Консультация инженера
 				</a>
 				<div class="header__top-contacts">
@@ -65,7 +69,7 @@
 				</div>
 			</div>
 			<nav class="header__nav">
-				<ul class="hader__nav-list">
+				<ul class="header__nav-list">
 					<li class="header__nav-item">
 						<a href="#" class="header__nav-link">
 							Калькулятор
@@ -171,30 +175,67 @@
 							Лицензии и сертификаты в наличии
 						</p>
 						<div class="header__slider header__slider-js ">
-							<div class="header__slider-item">
+							<a href="img/sertificate.jpg" class="header__slider-item">
 								<img src="img/sertificate.jpg" alt="sertificate" class="slider-img">
-							</div>
-							<div class="header__slider-item">
+							</a>
+							<a href="img/sertificate.jpg" class="header__slider-item">
 								<img src="img/sertificate.jpg" alt="sertificate" class="slider-img">
-							</div>
-							<div class="header__slider-item">
+							</a>
+							<a href="img/sertificate.jpg" class="header__slider-item">
 								<img src="img/sertificate.jpg" alt="sertificate" class="slider-img">
-							</div>
-							<div class="header__slider-item">
+							</a>
+							<a href="img/sertificate.jpg" class="header__slider-item">
 								<img src="img/sertificate.jpg" alt="sertificate" class="slider-img">
-							</div>
-							<div class="header__slider-item">
+							</a>
+							<a href="img/sertificate.jpg" class="header__slider-item">
 								<img src="img/sertificate.jpg" alt="sertificate" class="slider-img">
-							</div>
+							</a>
 						</div>
 					</div>
 				</div>
 
 			</div>
 		</div>
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<div class="map-popup">
+			<div class="map-popup__main">
+				<div class="close-popup"></div>
+				<div class="map-popup__content">
+					<script type="text/javascript" charset="utf-8" async
+						src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A82498587a003babb4c2bf38c5665f19bd27c3c84d21d4c807b77368dd3d071c4&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
+				</div>
+			</div>
+		</div>
+		<!--
+		<div class="cert-popup">
+			<div class="cert-popup__body">
+				<div class="cert-popup__content">
+					<div class="cert-popup__close"></div>
+					<div class="cert-popup__items">
+						<div class="header__slider-item">
+							<img src="img/sertificate.jpg" alt="sertificate" class="cert-popup-img">
+						</div>
+						<div class="header__slider-item">
+							<img src="img/sertificate.jpg" alt="sertificate" class="cert-popup-img">
+						</div>
+						<div class="header__slider-item">
+							<img src="img/sertificate.jpg" alt="sertificate" class="cert-popup-img">
+						</div>
+						<div class="header__slider-item">
+							<img src="img/sertificate.jpg" alt="sertificate" class="cert-popup-img">
+						</div>
+						<div class="header__slider-item">
+							<img src="img/sertificate.jpg" alt="sertificate" class="cert-popup-img">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		-->
+		<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 		<script src="js/slick.min.js"></script>
 		<script src="js/options.js"></script>
+		<script src="js/main.js"></script>
+		<script src="js/jquery.magnific-popup.min.js"></script>
 </body>
 
 </html>
